<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MovieDetailActivity"
    tools:ignore="MergeRootFrame">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/detailsProgressBarFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/detailsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_image_content_description"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/movie_detail_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/movieThumb"
                    android:layout_width="125dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/movie_thumbnail_content_description" />

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/movieThumb"
                    android:layout_alignTop="@+id/movieThumb"
                    android:layout_toEndOf="@+id/movieThumb"
                    android:layout_toRightOf="@+id/movieThumb"
                    android:gravity="center_vertical">

                    <TableRow
                        android:id="@+id/movieTitleRow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="0dp">

                        <TextView
                            android:id="@+id/movieTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center_vertical"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:visibility="visible" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/popularityRow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/popularityLabel"
                            style="@style/TableSectionPrimaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/popularity_label" />

                        <TextView
                            android:id="@+id/moviePopularity"
                            style="@style/TableSectionSecondaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:gravity="center_vertical" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/ratingRow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/ratingLabel"
                            style="@style/TableSectionPrimaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:text="@string/rating_label" />

                        <RatingBar
                            android:id="@+id/movieRatingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:clickable="false"
                            android:gravity="center_vertical"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressDrawable="@drawable/ratingbar_gold"
                            android:visibility="visible" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/votesRow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/votesLabel"
                            style="@style/TableSectionPrimaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center_vertical"
                            android:text="@string/votes_label" />

                        <TextView
                            android:id="@+id/movieVotes"
                            style="@style/TableSectionSecondaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:gravity="center_vertical" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/releaseRow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/releaseLabel"
                            style="@style/TableSectionPrimaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:gravity="center_vertical"
                            android:text="@string/release_label" />

                        <TextView
                            android:id="@+id/movieReleaseDate"
                            style="@style/TableSectionSecondaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:gravity="center_vertical" />

                    </TableRow>

                </TableLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/movieDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:padding="8dp"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/trailerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/trailerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/trailer_section_label"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <include layout="@layout/separator" />

                <ViewFlipper
                    android:id="@+id/trailerFlipper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <include layout="@layout/separator" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/reviewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/reviewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="16dp"
                    android:text="@string/reviews_section_label"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <include layout="@layout/separator" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_toggle_favorite"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_star" />

</android.support.design.widget.CoordinatorLayout>

